@@ -45,6 +45,9 @@
       <para>April 28th, 2006</para>
       <itemizedlist>
         <listitem>
+          <para>[bdubbs] - Udated bootscripts Makefile to install autofs after cleanfs.</para>
+        </listitem>
+        <listitem>
           <para>[randy] - Updated to Berkeley DB-4.4.20.</para>
         </listitem>
       </itemizedlist>
